test/should-fail/malformed-ka-defn/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass k1
{
  method object-t init(object-t self, object-t token : nullptr, const char8-t* filename : nullptr)
  {
    self = $init(super);
    return self;
  }
} 

int-t main()
{
  object-t o = make(k1::klass, #token : null, #filename : nullptr, #token : null);
  USE(o);
  return 0;
}
